get all devices

--- a/windows/rnwindowsminimal/rnwindowsminimal.csproj
+++ b/windows/rnwindowsminimal/rnwindowsminimal.csproj
@@ -105,6 +105,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Bluetooth\BleCharacteristic.cs" />
     <Compile Include="Bluetooth\BleDevice.cs" />
     <Compile Include="Bluetooth\BleManager.cs" />
     <Compile Include="Constants\Enum.cs" />
