--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-safe-area-context": "^3.1.8",
     "react-native-windows": "0.68.3"
   },
   "devDependencies": {
@@ -27,10 +29,10 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "metro-config": "^0.67.0",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4",
-    "metro-config": "^0.67.0"
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
