--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@types/react-navigation": "^3.4.0",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^1.8.0",
-    "react-native-safe-area-context": "^3.1.8",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
     "react-native-windows": "0.68.3"
   },
   "devDependencies": {
