--- a/windows/rnwindowsminimal/rnwindowsminimal.csproj
+++ b/windows/rnwindowsminimal/rnwindowsminimal.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Bluetooth\Helpers\PropertyHelper.cs" />
     <Compile Include="Constants\Enum.cs" />
     <Compile Include="Constants\Codes.cs" />
+    <Compile Include="Helpers\Timers.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -154,6 +155,9 @@
     <Import Project="$(ReactNativeWindowsDir)\PropertySheets\External\Microsoft.ReactNative.Uwp.CSharpApp.props" Condition="Exists('$(ReactNativeWindowsDir)\PropertySheets\External\Microsoft.ReactNative.Uwp.CSharpApp.props')" />
   </ImportGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.13</Version>
     </PackageReference>
