--- a/windows/rnwindowsminimal/rnwindowsminimal.csproj
+++ b/windows/rnwindowsminimal/rnwindowsminimal.csproj
@@ -105,7 +105,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Bluetooth\BleManager.cs" />
+    <Compile Include="Bluetooth\RnBluetooth.cs" />
     <Compile Include="Constants\Enum.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -165,6 +165,10 @@
     <ProjectReference Include="..\Dorsavi.Windows.Bluetooth\Dorsavi.Windows.Bluetooth.csproj">
       <Project>{bc88c459-b46c-4840-a510-5d100c221820}</Project>
       <Name>Dorsavi.Windows.Bluetooth</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dorsavi.Windows.Framework\Dorsavi.Windows.Framework.csproj">
+      <Project>{b5693160-4d42-4299-a0b7-836f3ef170fa}</Project>
+      <Name>Dorsavi.Windows.Framework</Name>
     </ProjectReference>
   </ItemGroup>
   <ImportGroup Label="ReactNativeWindowsTargets">
