--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-camera": "^4.2.1",
     "react-native-windows": "0.68.3"
   },
   "devDependencies": {
