--- a/windows/rnwindowsminimal/rnwindowsminimal.csproj
+++ b/windows/rnwindowsminimal/rnwindowsminimal.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Bluetooth\RnBluetooth.cs" />
+    <Compile Include="Common\Events.cs" />
     <Compile Include="Constants\Enum.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -113,6 +114,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutolinkedNativeModules.g.cs" />
     <Compile Include="ReactPackageProvider.cs" />
+    <Compile Include="Realm\RnData.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -162,6 +164,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\Dorsavi.Win.Mongo\Dorsavi.Win.Mongo.csproj">
+      <Project>{9847e5e6-6b2c-4774-ae5c-febad7188712}</Project>
+      <Name>Dorsavi.Win.Mongo</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Dorsavi.Windows.Bluetooth\Dorsavi.Win.Bluetooth.csproj">
       <Project>{bc88c459-b46c-4840-a510-5d100c221820}</Project>
       <Name>Dorsavi.Win.Bluetooth</Name>
